# aws-orphan-finder

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
aws_orphan_finder/: __init__.py  cli.py  models.py  output.py  pricing.py  scanner.py  summary.py
examples/: demo.py  sample_scan.json
tests/: conftest.py  test_output_and_cli.py  test_scanner.py
