[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-orphan-finder"
version = "0.1.0"
description = "Find orphaned AWS resources (unattached EIPs, EBS volumes, ENIs, stale snapshots) and estimate monthly waste."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Michael Tarassov", email = "michael@tarassov.me" }]
keywords = ["aws", "cost", "finops", "ebs", "eip", "cleanup", "boto3"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.26",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/moveeeax/aws-orphan-finder"
Repository = "https://github.com/moveeeax/aws-orphan-finder"

[project.scripts]
aws-orphan-finder = "aws_orphan_finder.cli:main"

[tool.setuptools]
packages = ["aws_orphan_finder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
